--- a/css/style.css
+++ b/css/style.css
@@ -739,6 +739,12 @@ select:focus {
   float: left;
 }
 
+@media (max-width: 540px) {
+  .ba-fresh {
+    background-position: 30%;
+  }
+}
+
 .ba-nav {
   float: right;
 }
@@ -846,6 +852,24 @@ select:focus {
   margin-bottom: 14px;
 }
 
+@media (max-width: 768px) {
+  .ba-about .ba-width-1-2 {
+    width: 100%;
+    float: none;
+  }
+  .ba-about img {
+    position: relative;
+    right: 15px;
+    top: 0;
+  }
+  .ba-about__text {
+    padding: 0px;
+  }
+  .ba-about h1 {
+    text-align: center;
+  }
+}
+
 .ba-services {
   background: #70BFFF;
   padding: 100px 0 131px;
@@ -912,28 +936,79 @@ select:focus {
   bottom: 0;
 }
 
+@media (max-width: 1050px) {
+  .ba-services__title {
+    margin: 0;
+  }
+}
+
+@media (max-width: 960px) {
+  .ba-services__menu {
+    padding-right: 30px;
+  }
+  .ba-services__title {
+    background-size: contain;
+  }
+}
+
+@media (max-width: 768px) {
+  .ba-services .ba-width-1-2 {
+    width: 100%;
+    float: none;
+  }
+  .ba-services__title {
+    background-position: 50%;
+  }
+  .ba-services__menu {
+    padding: 0;
+    padding-top: 20px;
+    float: none;
+  }
+  .ba-services__menu li {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 570px) {
+  .ba-services__title {
+    padding-top: 150px;
+  }
+}
+
 .ba-gallery {
   background: #ffe92f;
   padding: 90px 0 120px;
   text-align: center;
 }
 
-.ba-gallery img {
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
 .ba-gallery p {
-  margin: 28px 0 46px;
+  margin: 28px auto 46px;
+  max-width: 580px;
 }
 
 .ba-gallery .ba-button {
   margin-top: 50px;
   background: #5585a2;
   padding: 0 43px;
+  display: inline-block;
 }
 
 .ba-gallery .ba-button:hover {
   background: #436a81;
+}
+
+.ba-gallery a {
+  display: block;
+}
+
+.ba-gallery img {
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+  transition: box-shadow .2s ease-in;
+}
+
+.ba-gallery img:hover {
+  box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.7);
 }
 
 .ba-img-bottom {
@@ -943,7 +1018,7 @@ select:focus {
 .ba-subscribe {
   background: url(../img/bg-sub.jpg) 50% no-repeat;
   background-size: cover;
-  padding: 140px 0 163px;
+  padding: 140px 0 133px;
 }
 
 .ba-subscribe p {
@@ -956,7 +1031,10 @@ select:focus {
   min-height: 53px;
   line-height: 53px;
   padding: 0 15px;
-  width: 100%;
+  min-width: 50%;
+  max-width: 570px;
+  margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .ba-subscribe input:focus {
@@ -992,6 +1070,15 @@ select:focus {
   background: #759022;
 }
 
+@media (max-width: 480px) {
+  .ba-subscribe input {
+    width: 100%;
+  }
+  .ba-subscribe form {
+    text-align: center;
+  }
+}
+
 .ba-blog {
   background: #b07cf7;
   color: #FFF;
@@ -1011,6 +1098,8 @@ select:focus {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
   position: relative;
   text-align: left;
+  display: block;
+  transition: box-shadow .2s ease-in;
 }
 
 .ba-blog__img:after {
@@ -1023,6 +1112,14 @@ select:focus {
   bottom: 0;
 }
 
+.ba-blog__img:hover {
+  box-shadow: 0px 4px 10px 3px rgba(0, 0, 0, 0.7);
+}
+
+.ba-blog__img:hover:after {
+  background: linear-gradient(to bottom, transparent, black);
+}
+
 .ba-blog__date {
   position: absolute;
   border-radius: 5px;
@@ -1032,16 +1129,18 @@ select:focus {
   top: 30px;
   left: 30px;
   text-align: center;
+  font-size: 32px;
+  font-weight: 700;
 }
 
-.ba-blog__date h4, .ba-blog__date h5 {
+.ba-blog__date time, .ba-blog__date span {
   margin: 0;
   margin-top: 1px;
+  display: block;
 }
 
-.ba-blog__date h5 {
+.ba-blog__date span {
   font-size: 21px;
-  font-weight: 800;
 }
 
 .ba-blog__text {
@@ -1059,6 +1158,30 @@ select:focus {
 .ba-blog__text p {
   font-size: 13px;
   margin: 0;
+}
+
+@media (min-width: 731px) and (max-width: 860px), (max-width: 300px) {
+  .ba-blog__date {
+    top: 10px;
+    left: 10px;
+  }
+  .ba-blog__text {
+    bottom: 10px;
+  }
+  .ba-blog__text h5 {
+    margin-bottom: 5px;
+  }
+}
+
+@media (max-width: 730px) {
+  .ba-blog .ba-width-1-3 {
+    width: 100%;
+    float: none;
+    margin-bottom: 20px;
+  }
+  .ba-blog .ba-width-1-3 a {
+    display: inline-block;
+  }
 }
 
 .ba-blog .ba-button {
@@ -1084,7 +1207,8 @@ select:focus {
 }
 
 .ba-contact p {
-  margin-bottom: 45px;
+  max-width: 350px;
+  margin: 0 auto 45px;
 }
 
 .ba-contact__form {
@@ -1156,6 +1280,15 @@ select:focus {
   text-decoration: underline;
 }
 
+@media (max-width: 768px) {
+  .ba-contact__form {
+    padding-right: 20px;
+  }
+  .ba-contact__contacts {
+    padding-left: 20px;
+  }
+}
+
 .ba-footer {
   color: #b9b9b9;
   background: #262626;
@@ -1184,6 +1317,62 @@ select:focus {
 .ba-footer span {
   color: #ff2b58;
   font-weight: 700;
+}
+
+@media (max-width: 480px) {
+  .ba-section {
+    padding: 50px 0;
+  }
+  h1 {
+    font-size: 70px;
+  }
+  h2 {
+    font-size: 50px;
+  }
+  .ba-about {
+    padding-bottom: 30px;
+  }
+  .ba-services__title {
+    padding: 50px 0;
+  }
+  .ba-row > [class*="ba-width-"],
+  [class*="ba-width-"] {
+    float: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px;
+  }
+  .ba-row + .ba-row,
+  .ba-row {
+    margin: 0;
+  }
+  .ba-gallery img {
+    margin: 0;
+    margin-bottom: 25px;
+  }
+  .ba-gallery .ba-row {
+    max-width: 370px;
+    margin: 0 auto;
+  }
+  .ba-contact__form {
+    padding: 0;
+  }
+  .ba-contact__contacts {
+    padding: 0;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 20px;
+    margin-top: 30px;
+  }
+  .ba-footer {
+    padding-bottom: 17px;
+  }
+  .ba-footer__logo {
+    position: relative;
+  }
+  .ba-footer__copy, .ba-footer__made {
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
