--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,6 +142,11 @@ textarea {
 		float: left;
 	}
 }
+@media (max-width: 540px){
+	.ba-fresh{
+		background-position: 30%;
+	}
+}
 .ba-nav{
 	float: right;
 
@@ -233,6 +238,25 @@ textarea {
 		margin-bottom: 14px;
 	}
 }
+@media (max-width: 768px){
+	.ba-about{
+		.ba-width-1-2{
+			width: 100%;
+			float: none;
+		}
+		img{
+			position: relative;
+			right: 15px;
+			top: 0;
+		}
+		&__text{
+			padding: 0px;
+		}
+		h1{
+			text-align: center;
+		}
+	}
+}
 .ba-services{
 	background: #70BFFF;
 	padding: 100px 0 131px;
@@ -279,7 +303,6 @@ textarea {
 			border-left: 1px solid #9D9D9D;
 			position: relative;
 			vertical-align: middle;
-
 			svg{
 				position: absolute;
 				margin: auto;
@@ -291,22 +314,70 @@ textarea {
 		}
 	}
 }
+@media (max-width: 1050px){
+	.ba-services__title{
+		margin: 0;
+	}
+}
+@media (max-width: 960px){
+	.ba-services__menu{
+		padding-right: 30px;
+	}
+	.ba-services__title{
+		background-size: contain;
+	}
+}
+@media (max-width: 768px){
+	.ba-services{
+		.ba-width-1-2{
+			width: 100%;
+			float: none;
+		}
+		&__title{
+			background-position: 50%;
+		}
+		&__menu{
+			padding: 0;
+			padding-top: 20px;
+			float: none;
+			li{
+				margin-right: auto;
+				margin-left: auto;
+			}
+		}
+	}
+}
+@media (max-width: 570px){
+	.ba-services__title{
+		padding-top: 150px;
+	}
+}
 .ba-gallery{
 	background: #ffe92f;
 	padding: 90px 0 120px;
 	text-align: center;
-	img{
-		box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
-	}
 	p{
-		margin: 28px 0 46px;
+		margin: 28px auto 46px;
+		max-width: 580px;
 	}
 	.ba-button{
 		margin-top: 50px;
 		background: #5585a2;
 		padding: 0 43px;
+		display: inline-block;
 		&:hover{
 			background: darken(#5585a2, 10%);
+		}
+	}
+	a{
+		display: block;
+
+	}
+	img{
+		box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+		transition: box-shadow .2s ease-in;
+		&:hover{
+			box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.7);
 		}
 	}
 }
@@ -316,7 +387,7 @@ textarea {
 .ba-subscribe{
 	background: url(../img/bg-sub.jpg) 50% no-repeat;
 	background-size: cover;
-	padding: 140px 0 163px;
+	padding: 140px 0 133px;
 	p{
 		max-width: 570px;
 		margin-bottom: 29px;
@@ -326,7 +397,10 @@ textarea {
 		min-height: 53px;
 		line-height: 53px;
 		padding: 0 15px;
-		width: 100%;
+		min-width: 50%;
+		max-width: 570px;
+		margin-bottom: 30px;
+		margin-right: 30px;
 		&:focus{
 			box-shadow: inset 0 0 5px 3px #96b92c;
 		}
@@ -340,6 +414,16 @@ textarea {
 		padding: 0 30px;
 		&:hover{
 			background: darken(#96b92c, 10%);
+		}
+	}
+}
+@media (max-width: 480px){
+	.ba-subscribe{
+		input{
+			width: 100%;
+		}
+		form{
+			text-align: center;
 		}
 	}
 }
@@ -358,6 +442,9 @@ textarea {
 		box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
 		position: relative;
 		text-align: left;
+		display: block;
+		transition: box-shadow .2s ease-in;
+
 		&:after{
 			position: absolute;
 			content: "";
@@ -366,6 +453,12 @@ textarea {
 			left: 0;
 			right: 0;
 			bottom: 0;
+		}
+		&:hover{
+			box-shadow: 0px 4px 10px 3px rgba(0, 0, 0, 0.7);
+			&:after{
+				background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 1));
+			}
 		}
 	}
 	&__date{
@@ -377,13 +470,17 @@ textarea {
 		top: 30px;
 		left: 30px;
 		text-align: center;
-		h4, h5{
+		font-size: 32px;
+		font-weight: 700;
+
+		time, span{
 			margin: 0;
 			margin-top: 1px;
+			display: block;
 		}
-		h5{
+		span{
 			font-size: 21px;
-			font-weight: 800;
+			// font-weight: 800;
 		}
 	}
 	&__text{
@@ -398,6 +495,31 @@ textarea {
 		p{
 			font-size: 13px;
 			margin: 0;
+		}
+	}
+	@media (min-width: 731px) and (max-width: 860px), (max-width: 300px){
+		&__date{
+			top: 10px;
+			left: 10px;
+		}
+		&__text {
+			bottom: 10px;
+			h5{
+				margin-bottom: 5px;
+			}
+		}
+	}
+	@media (max-width: 730px){
+		.ba-width-1-3{
+			width: 100%;
+			float: none;
+			margin-bottom: 20px;
+			a{
+				display: inline-block;
+			}
+			&__img{
+
+			}
 		}
 	}
 	.ba-button{
@@ -419,7 +541,8 @@ textarea {
 		margin-bottom: 30px;
 	}
 	p{
-		margin-bottom: 45px;
+		max-width: 350px;
+		margin: 0 auto 45px;
 	}
 	&__form{
 		padding-right: 85px;
@@ -467,6 +590,14 @@ textarea {
 		}
 	}
 }
+@media (max-width: 768px){
+	.ba-contact__form{
+		padding-right: 20px;
+	}
+	.ba-contact__contacts{
+		padding-left: 20px;
+	}
+}
 .ba-footer{
 	color: #b9b9b9;
 	background: #262626;
@@ -490,5 +621,62 @@ textarea {
 	span{
 		color:  #ff2b58;
 		font-weight: 700;
+	}
+}
+@media (max-width: 480px){
+	.ba-section{
+		padding: 50px 0;
+	}
+	h1{
+		font-size: 70px;
+	}
+	h2{
+		font-size: 50px;
+	}
+	.ba-about{
+		padding-bottom: 30px;
+	}
+	.ba-services__title{
+		padding: 50px 0;
+	}
+	.ba-row > [class*="ba-width-"],
+	[class*="ba-width-"]{
+		float: none;
+		width: 100%;
+		margin: 0;
+		padding: 0;
+		margin-bottom: 20px;
+	}
+	.ba-row + .ba-row,
+	.ba-row{
+		margin: 0;
+	}
+	.ba-gallery{
+		img{
+		margin: 0;
+		margin-bottom: 25px;
+		}
+		.ba-row{
+			max-width: 370px;
+			margin: 0 auto;
+		}
+	}
+	.ba-contact__form{
+		padding: 0;
+	}
+	.ba-contact__contacts{
+		padding: 0;
+		background: rgba(255,255,255,0.2);
+		padding: 20px;
+		margin-top: 30px;
+	}
+	.ba-footer{
+		padding-bottom: 17px;
+		&__logo{
+			position: relative;
+		}
+		&__copy, &__made{
+			text-align: center;
+		}
 	}
 }
